# email-phish-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  attachment_analyzer.py  auth.py  backup_db.py  browser_detonator.py  celery_worker.py  config.py  database.py  docker-compose.yml  email_parser.py  header_analyzer.py  helpers.py  html_similarity.py  imap_poller.py  ioc_extractor.py  mitre_mapper.py  ml_classifier.py  models.py  nlp_analyzer.py  notifications.py  pyproject.toml  report_generator.py  requirements-dev.txt  requirements.txt  stix_exporter.py  storage.py  tasks.py  threat_intel.py  threat_scorer.py  url_analyzer.py  whois_lookup.py  yara_scanner.py
.github/workflows/: ci.yml
extension/: background.js  content.css  content.js  manifest.json  options.html  options.js  popup.html  popup.js
static/css/: style.css
static/js/: app.js  dashboard.js  tooltips.js  utils.js
static/samples/: sample_phishing.eml
templates/: admin.html  audit.html  dashboard.html  history.html  index.html  job_status.html  login.html  notifications.html  onboarding.html  register.html  report.html  team.html
tests/: conftest.py  test_analyzer.py  test_auth.py  test_browser_detonator.py  test_database.py  test_helpers.py  test_html_similarity.py  test_imap_poller.py  test_integration.py  test_ml_classifier.py  test_nlp_analyzer.py  test_notifications.py  test_report_generator.py  test_storage.py  test_tasks.py  test_threat_intel.py  test_yara_scanner.py
tests/load/: README.md  locustfile.py
yara_rules/: phishing_common.yar
(+8 files in other folders)
